@@ -190,24 +190,24 @@ public class EngineGetPayloadBodiesByHashV1Test {
     final Hash blockHash1 = Hash.wrap(Bytes32.random());
     final Hash blockHash2 = Hash.wrap(Bytes32.random());
     final Withdrawal withdrawal =
-            new Withdrawal(UInt64.ONE, UInt64.ONE, Address.fromHexString("0x1"), GWei.ONE);
+        new Withdrawal(UInt64.ONE, UInt64.ONE, Address.fromHexString("0x1"), GWei.ONE);
     final Withdrawal withdrawal2 =
-            new Withdrawal(UInt64.ONE, UInt64.ONE, Address.fromHexString("0x2"), GWei.ONE);
+        new Withdrawal(UInt64.ONE, UInt64.ONE, Address.fromHexString("0x2"), GWei.ONE);
 
     final BlockBody shanghaiBlockBody =
-            new BlockBody(
-                    List.of(
-                            new TransactionTestFixture().createTransaction(sig.generateKeyPair()),
-                            new TransactionTestFixture().createTransaction(sig.generateKeyPair()),
-                            new TransactionTestFixture().createTransaction(sig.generateKeyPair())),
-                    Collections.emptyList(),
-                    Optional.of(List.of(withdrawal)));
+        new BlockBody(
+            List.of(
+                new TransactionTestFixture().createTransaction(sig.generateKeyPair()),
+                new TransactionTestFixture().createTransaction(sig.generateKeyPair()),
+                new TransactionTestFixture().createTransaction(sig.generateKeyPair())),
+            Collections.emptyList(),
+            Optional.of(List.of(withdrawal)));
 
     final BlockBody shanghaiBlockBody2 =
-            new BlockBody(
-                    List.of(new TransactionTestFixture().createTransaction(sig.generateKeyPair())),
-                    Collections.emptyList(),
-                    Optional.of(List.of(withdrawal2)));
+        new BlockBody(
+            List.of(new TransactionTestFixture().createTransaction(sig.generateKeyPair())),
+            Collections.emptyList(),
+            Optional.of(List.of(withdrawal2)));
     when(blockchain.getBlockBody(blockHash1)).thenReturn(Optional.of(shanghaiBlockBody));
     when(blockchain.getBlockBody(blockHash2)).thenReturn(Optional.of(shanghaiBlockBody2));
 
@@ -219,7 +219,6 @@ public class EngineGetPayloadBodiesByHashV1Test {
     assertThat(result.getPayloadBodies().get(1).getTransactions().size()).isEqualTo(1);
     assertThat(result.getPayloadBodies().get(1).getWithdrawals().size()).isEqualTo(1);
   }
-
 
   private JsonRpcResponse resp(final Hash[] hashes) {
     return method.response(
